[package]
name = "vitrellogy"
version = "0.1.0"
authors = ["TechnoElf <jhjavadev@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.11"
rand = "0.7.3"
nalgebra = "0.20"
ncollide2d = "0.22"
nphysics2d = "0.14"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image", "ttf", "mixer"]

[dependencies.specs]
version = "0.16.1"
features = ["specs-derive", "parallel"]

[dependencies.vitrellogy-macro]
path = "./vitrellogy-macro/"
version = "0.1.0"
