[package]
name = "vitrellogy"
version = "0.1.0"
authors = ["TechnoElf <jhjavadev@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.11"
rand = "0.7.3"
nalgebra = "0.22"
ncollide2d = "0.24"
nphysics2d = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
sdl2 = { version = "0.34.2", default-features = false, features = ["image", "ttf", "mixer"] }
specs = { version = "0.16.1", features = ["specs-derive", "parallel", "serde", "uuid_entity"] }

vitrellogy-macro = { path = "./vitrellogy-macro/", version = "0.1.0" }
